--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Harsha Vardhan Reddy</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="image/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,15 +13,15 @@
   </head>
   <body>
     <div class="top">
-      <img class="top-cloud" src="image/cloud.png" alt="cloud image">
+      <img class="top-cloud" src="cloud.png" alt="cloud image">
       <h1>I'm Harsha.</h1>
       <p><h2 class="heading-below">I'm from <span class="student">India</span></h2></p>
       <img class="bottom-cloud" src="image/cloud.png" alt="cloud image">
-      <img src="image/mountain.png" alt="mountain image">
+      <img src="mountain.png" alt="mountain image">
     </div>
     <div class="middle">
       <div class="profile">
-        <img class='best'src="image/best-employee.png" alt="">
+        <img class='best'src="best-employee.png" alt="">
         <h2>Hello.</h2>
         <p class="intro">My name is Harsha,I seek challenging opportunities where I can fully use My skills for the success of the organiztion.</p>
       </div>
@@ -29,12 +29,12 @@
       <div class="skills">
         <h2>Goal</h2>
         <div class="skill-row">
-          <img class="photo1" src="image/goal.png" alt="">
+          <img class="photo1" src="goal.png" alt="">
           <h3>Growth</h3>
           <p>To work in an environment which encourages me to succeed .</p>
         </div>
         <div class="skill-row">
-          <img class="photo1 part" src="image/graduated.png" alt="">
+          <img class="photo1 part" src="graduated.png" alt="">
           <h3>Fresher</h3>
           <p>I am looking for a challenging job with a rapidly growing organization .</p>
         </div>
