--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img class="top-cloud" src="cloud.png" alt="cloud image">
       <h1>I'm Harsha.</h1>
       <p><h2 class="heading-below">I'm from <span class="student">India</span></h2></p>
-      <img class="bottom-cloud" src="image/cloud.png" alt="cloud image">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud image">
       <img src="mountain.png" alt="mountain image">
     </div>
     <div class="middle">
