--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="bottom">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.facebook.co/">Website</a>
+      <a class="footer-link" href="https://www.facebook.com/">Website</a>
       <p class='copy'>© Harsha.</p>
     </div>
 
