--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Get In Touch</h2>
         <h3>Hope you like my work!</h3>
         <p class='contact'>If you have any suggestions for me.Don't hesitate to tell.</p>
-        <a class="btn" href="mailto:@email.com">CONTACT ME</a>
+        <a class="btn" href="https://github.com/arsha32">CONTACT ME</a>
       </div>
     </div>
 
